syntax = "proto3";

option java_package = "com.infomaximum.cluster.core.service.transport.network.grpc.struct";
option java_multiple_files = true;

message PRuntimeComponentInfo {
  int32 node = 1;
  int32 uniqueId = 2;
  string uuid = 3;
  bool isSingleton = 4;
  repeated string classNameRControllers = 5;
}

message PRuntimeComponentInfoList {
  repeated PRuntimeComponentInfo PRuntimeComponentInfos = 1;
}