syntax = "proto3";

package com.infomaximum.cluster.core.service.transport.network.grpc.pservice;

import "Empty.proto";

import "PRuntimeComponentInfo.proto";

service PServiceRemoteManagerComponent {

  rpc listenerRemoteComponents (Empty) returns (stream PRuntimeComponentInfoList) {}

}